# klubu

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.jpb/: jpb-settings.xml
app/: Cargo.toml
app/src/: components.rs  lib.rs  pdf.rs  typst_gen.rs
app/src/einvoice/: cii.rs  mod.rs
app/src/pages/: chat.rs  contacts.rs  email.rs  engagements.rs  invoices.rs  mod.rs  notifications.rs  receipts.rs
app/src/server/: ai.rs  chat.rs  email.rs  engagements.rs  invoices.rs  mod.rs  offers.rs  reports.rs
app/src/server/db/: mod.rs  repository.rs
app/templates/: invoice.typ
backend/: .gitignore  Cargo.toml  build.gradle.kts  docker-compose.yml  docker-notes.txt  settings.gradle.kts
backend/files/templates/: invoice.html  offer-test.html  offer.html
backend/migrations-postgres/: 202606151452_init.sql  202607082359_auth.sql  202607101800_engagement.sql  202607102100_contact_phones.sql  202607111200_invoice_terms_reminders.sql
backend/migrations-sqlite/: 202607082336_unique_numbers.sql  202607090012_document_counter.sql  202607101900_contact_emails.sql  202607102010_mail_attachments.sql  202607111200_invoice_terms_reminders.sql  202607111300_invoice_credit_note_type.sql
backend/src/: mail.rs  main.rs
backend/src/main/kotlin/dev/zinsmeister/klubu/: KlubuApplication.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/common/domain/: Address.kt  ImmutableItem.kt  Item.kt  Payment.kt  Recipent.kt  Recipient.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/common/dto/: ItemDTO.kt  MoneyDTO.kt  PaymentDTO.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/configuration/: SpaRedirectFilterConfiguration.kt  WebConfig.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/contact/controller/: ContactController.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/contact/domain/: Contact.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/contact/dto/: ContactDTO.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/contact/repository/: ContactRepository.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/contact/service/: ContactService.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/document/controller/: DocumentController.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/document/domain/: Document.kt  DocumentEntity.kt  DocumentVersion.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/document/dto/: DocumentDTO.kt  DocumentMetadataDTO.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/document/exception/: NoVersionException.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/document/repository/: DocumentRepository.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/document/service/: DocumentService.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/documentfile/controller/: DocumentController.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/documentfile/domain/: Document.kt  DocumentEntity.kt  DocumentVersion.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/documentfile/dto/: DocumentMetadataDTO.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/documentfile/exception/: DocumentStorageException.kt  NoVersionException.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/documentfile/repository/: DocumentRepository.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/documentfile/service/: DocumentService.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/exception/: IllegalModificationException.kt  IllegalModificationRequestException.kt  NotCodifiedException.kt  NotFoundInDBException.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/export/pdf/: HTML2PDFRenderer.kt  PDF2PDFAConverter.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/frontend/: FrontendController.kt
backend/src/main/kotlin/dev/zinsmeister/klubu/util/: DecimalFormatters.kt  MoneyUtils.kt  TimeUtils.kt
backend/src/main/resources/: application-dev.properties  application-int.properties  application.properties  user.properties
backend/src/main/resources/config/: application-dev.properties  application-devlinux.properties  application.properties
backend/src/main/resources/db/changelog/: db.changelog-001.yaml  db.changelog-master.yaml
backend/src/main/resources/export/default_templates/: invoice.html  offer.html
backend/src/main/resources/static/: index.html
backend/src/mcp/: mod.rs  protocol.rs  pytool.rs  sqltool.rs  tools.rs
backend/src/test/kotlin/dev/zinsmeister/klubu/: KlubuApplication.kt  KlubuApplicationTest.kt
backend/src/test/resources/: application.properties
leptos-app/app/: Cargo.toml
leptos-app/app/src/: components.rs  lib.rs  markdown.rs  pdf.rs  typst_gen.rs
leptos-app/app/src/einvoice/: cii.rs  mod.rs  parse.rs
leptos-app/app/src/pages/: auth.rs  contacts.rs  dashboard.rs  documents.rs  invoices.rs  mod.rs  offers.rs  receipts.rs  reports.rs
leptos-app/app/src/server/: ai.rs  auth.rs  contacts.rs  dashboard.rs  documents.rs  email.rs  export.rs  invoices.rs  mod.rs  offers.rs  receipts.rs  reports.rs
leptos-app/app/src/server/db/: mod.rs  repository.rs
leptos-app/app/templates/: invoice.typ
leptos-app/backend/: Cargo.toml
leptos-app/backend/migrations/: 202607082336_unique_numbers.sql  202607101530_contact_archive.sql
leptos-app/backend/migrations-postgres/: 202606161200_add_offer_group_id.sql  202607081200_euer_category_types.sql  202607082330_audit_log.sql  202607090012_document_counter.sql  202607101700_email_archive.sql  202607101900_contact_emails.sql  202607102000_crm_links.sql  202607102010_mail_attachments.sql  202607102200_draft_engagement_links.sql
leptos-app/backend/migrations-sqlite/: 202606151452_init.sql  202606161200_add_offer_group_id.sql  202607081200_euer_category_types.sql  202607082330_audit_log.sql  202607082359_auth.sql  202607100900_rename_document_text_columns.sql  202607101700_email_archive.sql  202607101800_engagement.sql  202607102000_crm_links.sql  202607102100_contact_phones.sql  202607102200_draft_engagement_links.sql
leptos-app/backend/src/: dbcopy.rs  main.rs  pdf.rs
leptos-app/mcp/: Cargo.toml
leptos-app/mcp/src/: http.rs  main.rs  protocol.rs  tools.rs
(+229 files in other folders)
