[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Both database drivers are compiled in; the DATABASE_URL scheme picks one at
# runtime via the `any` driver. That is also what lets `migrate-db` talk to a
# source and a target of different dialects in one process.
sqlx = { version = "0.8.0", features = ["runtime-tokio", "chrono", "postgres", "sqlite", "any", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }
app = { path = "../app", features = ["ssr"], default-features = false }
leptos = { version = "0.6.12", features = ["ssr"] }
leptos_axum = { version = "0.6.12" }
sha2 = "0.10"
base64 = "0.22"
walkdir = "2.5"
tower = { version = "0.4", features = ["util"] }
# Assistant tools: streaming row fetch for the read-only SQL tool …
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# … and the process-level sandbox of the Python tool (rlimits, scratch dir).
libc = "0.2"
tempfile = "3"
