[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.12" }
leptos_router = { version = "0.6.12" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["File", "FileList", "FileReader", "Event"] }
wasm-bindgen = "0.2"


# Server-only dependencies (enabled under ssr feature)
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"], optional = true }
typst = { version = "0.11.0", optional = true }
typst-pdf = { version = "0.11.0", optional = true }
walkdir = { version = "2.5", optional = true }
comemo = { version = "0.4.0", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
# Local-AI receipt prefill. Talks to Ollama over plain HTTP on localhost, so no
# TLS backend is pulled in.
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
pdf-extract = { version = "0.7", optional = true }
tokio = { version = "1.38", features = ["rt"], optional = true }

# Only needed so `cargo test -p app --features ssr` can compile the
# server-fn registrations, which require server_fn's axum integration.
[dev-dependencies]
leptos_axum = "0.6.12"

[features]
csr = ["leptos/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "dep:sqlx",
    "dep:typst",
    "dep:typst-pdf",
    "dep:walkdir",
    "dep:comemo",
    "dep:sha2",
    "dep:base64",
    "dep:reqwest",
    "dep:pdf-extract",
    "dep:tokio"
]


