[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }
app = { path = "../app", features = ["ssr"], default-features = false }
leptos = { version = "0.6.12", features = ["ssr"] }
leptos_axum = { version = "0.6.12" }
sha2 = "0.10"
walkdir = "2.5"
tower = { version = "0.4", features = ["util"] }

[features]
default = ["postgres"]
postgres = ["app/postgres", "sqlx/postgres"]
sqlite = ["app/sqlite", "sqlx/sqlite"]

