[package]
name = "klubu-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", features = ["ssr"], default-features = false }
axum = "0.7.5"
chrono = { version = "0.4", features = ["serde"] }
leptos = { version = "0.6.12", features = ["ssr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "chrono", "postgres", "sqlite", "any", "migrate"] }
tokio = { version = "1.38", features = ["full"] }
